--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http:
   flutter_easyloading: ^3.0.5
   readmore: ^2.2.0
+  image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
