--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   readmore: ^2.2.0
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
+  intl: ^0.19.0
+  geolocator: ^11.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
