--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,20 @@
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+<queries>
+<intent>
+  <action android:name="android.intent.action.VIEW" />
+  <data android:scheme="https" />
+</intent>
+<intent>
+  <action android:name="android.intent.action.DIAL" />
+  <data android:scheme="tel" />
+</intent>
+<intent>
+  <action android:name="android.intent.action.SEND" />
+  <data android:mimeType="*/*" />
+</intent>
+</queries>
     <application
         android:label="Pflegeruf PflegerIn"
         android:name="${applicationName}"
@@ -40,5 +54,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+              <meta-data 
+               android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCS5Naamd9gG5SEePQ3RbYdR_eNKxTj2mw"
+               />
+               <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
+<receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
+    <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+        <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+        <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+    </intent-filter>
+</receiver>
     </application>
 </manifest>
