--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   geolocator: ^11.0.0
   firebase_messaging: ^15.0.2
   flutter_local_notifications: ^17.2.1
+  location: ^7.0.0
+  geocoding: ^3.0.0
+  url_launcher: ^6.3.0
+  google_maps_flutter: ^2.7.0
+  flutter_polyline_points: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
