--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,9 @@ dependencies:
   geocoding: ^3.0.0
   url_launcher: ^6.3.0
   google_maps_flutter: ^2.7.0
-  file_picker: ^8.0.6
   flutter_polyline_points: ^2.0.0
-
+  file_picker: ^8.0.6
+  permission_handler: ^11.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
