--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   file_picker: ^8.0.6
   permission_handler: ^11.3.1
+  flutter_localization:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -84,6 +85,7 @@ flutter:
   assets:
       - assets/images/
       - assets/icons/
+      - assets/languages/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
