--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
   intl: ^0.19.0
-  geolocator: ^11.0.0
+  geolocator: ^13.0.1
   firebase_messaging: ^15.0.2
   flutter_local_notifications: ^17.2.1
-  location: ^7.0.0
+  location:
   geocoding: ^3.0.0
   url_launcher: ^6.3.0
   google_maps_flutter: ^2.7.0
